[project]
name = "pythonadvanceduvdemo"
version = "0.2.0"
description = "Banking-Hauptbuch als Demo für Python-Generatoren und den uv-Workflow"
readme = "README.md"
requires-python = ">=3.12"
# Keine Runtime-Abhängigkeiten – nur die Standardbibliothek wird genutzt.
# Das zeigt, dass uv auch für "pure Python"-Projekte sinnvoll ist.
dependencies = []

[project.scripts]
# Registriert den Befehl "ledger" für: uv run ledger
ledger = "ledger.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Sagt hatchling, wo das installierbare Paket liegt (src-Layout)
packages = ["src/ledger"]

[dependency-groups]
# Dev-Abhängigkeiten werden mit "uv sync --group dev" installiert
dev = [
    "mypy>=1.20.1",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff.lint]
# E = pycodestyle, F = pyflakes, I = isort
select = ["E", "F", "I"]

[tool.mypy]
python_version  = "3.12"
strict          = true
warn_return_any = true
pretty          = true
mypy_path       = "src"